Replace class name string with class literal. Cleanup test.